--- a/index.html
+++ b/index.html
@@ -123,49 +123,49 @@
             const baseUrl = './'; // 같은 폴더에 있으므로 ./ 로 경로를 단순화합니다.
             const galleryData = [
                 {
-                    img: `0.png`,
+                    img: `0.jpg`,
                     audio: `0.mp3`,
                     title: '넓이 예측의 두 가지 방법',
                     description: '공식으로 넓이를 구할 수 없는 도형은 어떻게 할까요? 격자법과 몬테카를로 방법을 통해 넓이를 예측할 수 있습니다. 격자가 촘촘해질수록, 점을 많이 찍을수록 실제 넓이에 가까워집니다.'
                 },
                 {
-                    img: `1.png`,
+                    img: `1.jpg`,
                     audio: `1.mp3`,
                     title: '수학적 확률 vs 통계적 확률',
                     description: '수학적 확률은 모든 경우의 수가 동일하게 일어날 것이라는 가정 하에 계산하는 이론적인 확률입니다. 반면, 통계적 확률은 실제 실험이나 관찰을 통해 얻은 결과를 바탕으로 계산하는 현실적인 확률입니다.'
                 },
                 {
-                    img: `2.png`,
+                    img: `2.jpg`,
                     audio: `2.mp3`,
                     title: '격자법으로 넓이 찾기',
                     description: '격자법은 도형 안에 들어오는 정사각형을 세거나, 도형에 걸치는 정사각형을 세어 넓이를 근사하는 방법입니다. 격자를 더 작게 만들수록 실제 넓이에 가까워집니다.'
                 },
                 {
-                    img: `3.png`,
+                    img: `3.jpg`,
                     audio: `3.mp3`,
                     title: '넓이를 구하는 마법, 정적분',
                     description: '정적분은 울퉁불퉁한 모양의 넓이를 구하기 위해 모양을 아주 잘게 썰어 더하는 기술입니다. 잘게 썰어낸 얇은 직사각형들의 넓이를 모두 더하여 전체 넓이를 구합니다.'
                 },
                 {
-                    img: `4.png`,
+                    img: `4.jpg`,
                     audio: `4.mp3`,
                     title: '몬테카를로 방법으로 넓이 구하기',
                     description: '몬테카를로 방법은 도형이 포함된 사각형 안에 무작위로 점을 찍어, 전체 점의 수와 도형 안의 점의 수의 비율을 이용하여 넓이를 어림짐작하는 방법입니다.'
                 },
                 {
-                    img: `5.png`,
+                    img: `5.jpg`,
                     audio: `5.mp3`,
                     title: '두 양을 비교하는 기본, 비와 비율',
                     description: "비와 비율은 두 양을 비교하는 가장 기본적인 방법입니다. '몇 대 몇'으로 비교하는 '비'와, 기준량에 대한 비교하는 양의 크기인 '비율'은 세상을 명확하게 이해하는 강력한 수학 도구입니다."
                 },
                 {
-                    img: `6.png`,
+                    img: `6.jpg`,
                     audio: `6.mp3`,
                     title: '기본도형의 넓이 완전정복',
                     description: '삼각형, 사각형, 원의 넓이를 구하는 것은 모든 도형의 크기를 이해하는 첫걸음입니다. 이 기본 원리를 통해 어떤 도형이든 여러 조각으로 나누어 넓이를 구할 수 있습니다.'
                 },
                 {
-                    img: `7.png`,
+                    img: `7.jpg`,
                     audio: `7.mp3`,
                     title: '고대 이집트의 땅과 원의 넓이',
                     description: '고대 이집트에서는 나일강의 범람 후 땅의 넓이를 다시 측정해야 했습니다. 밧줄을 이용하여 직각삼각형을 만들고, 이를 통해 땅의 넓이를 계산하는 등 실용적인 기하학이 발달했습니다.'
@@ -310,3 +310,4 @@
     </script>
 </body>
 </html>
+
